# fullstack-interview-template

./: solution.md
api/: .gitignore  pyproject.toml
api/app/: main.py  store.py
api/app/models/: message.py
api/app/routers/: messages.py  rag.py
api/app/services/: openai.py  rag.py
ui/: package-lock.json  package.json
ui/src/: index.css
ui/src/components/: markdown.tsx
ui/src/features/chat/: types.ts
ui/src/features/chat/components/: chat-layout.tsx  message-bubble.tsx  message-list.tsx
ui/src/features/chat/hooks/: use-messages.ts
